data/derived/comb/progs/unify/prog4250.ml.out
Characters 50-53:
  in g b
     ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
